--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -32,7 +32,7 @@
             </h3>
             <h4>I like to spend money</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question1">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -45,7 +45,7 @@
             </h3>
             <h4>I like to read for fun</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question2">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -58,7 +58,7 @@
             </h3>
             <h4>Religion is important to me</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question3">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -71,7 +71,7 @@
             </h3>
             <h4>I am a night owl</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question4">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -84,7 +84,7 @@
             </h3>
             <h4>I like to go to parties</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question5">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -97,7 +97,7 @@
             </h3>
             <h4>I like exercising</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question6">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -110,7 +110,7 @@
             </h3>
             <h4>I have lots of friends</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question7">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -123,7 +123,7 @@
             </h3>
             <h4>I am outgoing</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question8">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -136,7 +136,7 @@
             </h3>
             <h4>I like to travel</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question9">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -149,7 +149,7 @@
             </h3>
             <h4>I like to spend vacations with my family</h4>
             <select data-placeholder="Select an Option" class="chosen-select" tabindex="-1" id="question10">
-                <option value></option>
+                <option disabled selected>Select an option</option>
                 <option value="1">1 Strongly Disagree</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -180,6 +180,16 @@
 </body>
 
 </html>
+
+
+<div class="modal">
+    <div class="modal-content">
+        <h4>Friend Match</h4>
+        <h5 id="friendName"></h5>
+        <img id="friendPic" src="" alt="No Picture Found" width=250px>
+    </div>
+</div>
+
 <script type="text/javascript">
     $("#submit").on("click", function (event) {
         event.preventDefault();
@@ -211,6 +221,10 @@
             };
         };
 
-        $.post("/api/friends", survey)
+        $.post("/api/friends", survey, function (data) {
+            $("#friendName").text(data.name);
+            $("#friendPic").attr("src", data.photo)
+        });
+        $('.modal').modal();
     });
 </script>
