update to add error handling

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
             <h2 class=text-center>Answer a few basic questions.</h2>
             <h2 class=text-center>Then find the friend with the greatest compatibility!.</h2>
             <div class="text-center">
-                <a class="btn btn-primary btn-lg" href="survey.html" role="button">Go to
+                <a class="btn btn-primary btn-lg" href="survey" role="button">Go to
                     Survey</a>
             </div>
         </div>
